functionality container is colun flexbox which fixes scrollbar sizes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,6 +37,8 @@ body{
 .functionality-container{
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 #item-left-top{
